crates/sui-prover/tests/snapshots/quantifiers/pool_forall_exists.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/pool_forall_exists.fail.move:17:5
   │
17 │     ensures(not_all && some_exist);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/pool_forall_exists.fail.move:15: test_forall_and_exists_no_pool
